[Averan] Updated Demo2.